--- a/app/views/photos.html
+++ b/app/views/photos.html
@@ -1,8 +1,8 @@
 <!-- Photos -->
 <div class="photos row">
-  <div class="photo col-md-3" data-toggle="modal" data-target=".modal" ng-repeat="photo in photos">
-    <img class="img-responsive img-thumbnail" src="{{photo.thumbnail.url}}" ng-click="onPhotoSelected" />
-    <h4 ng-click="onPhotoSelected(photo)"><span>{{photo.timestamp}}</span></h4>
+  <div class="photo col-md-3 col-sm-4 col-xs-12" data-toggle="modal" data-target=".modal" ng-repeat="photo in photos">
+    <img class="img-responsive img-thumbnail" src="{{photo.thumbnail.url}}" ng-click="onPhotoSelected($index)" />
+    <h4 ng-click="onPhotoSelected($index)"><span>{{photo.timestamp | date: dateFormat}}</span></h4>
   </div>
   <div class="clearfix"></div>
 </div>
@@ -13,14 +13,14 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title">Modal title</h4>
+        <h4 class="modal-title">{{selectedPhoto.timestamp | date: dateFormat}}</h4>
       </div>
-      <div class="modal-body">
-        <img src="{{selectedPhoto.image.url}}" />
+      <div class="modal-body row">
+        <img src="{{selectedPhoto.image.url}}" class="img-responsive col-md-12" />
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn pull-left" ng-click="onPreviousPhoto()" ng-class="{'btn-primary' : hasPreviousPhoto}" ng-disabled="!hasPreviousPhoto">Previous</button>
+        <button type="button" class="btn" ng-click="onNextPhoto()" ng-class="{'btn-primary' : hasNextPhoto}" ng-disabled="!hasNextPhoto">Next</button>
       </div>
     </div>
   </div>
