--- a/web/app/styles/main.css
+++ b/web/app/styles/main.css
@@ -5,12 +5,12 @@ a:hover { color: #74ae6b; }
 
 .container { padding: 0; width: 100%; } 
 .header { padding: 0 15px; }
-.header h1 { color: #555; font-size: 4em; font-weight: bold; letter-spacing: -3px; line-height: 40px; margin: 0; padding: 0; }
+.header h1 { color: #555; font-size: 6em; font-weight: bold; letter-spacing: -8px; line-height: 40px; margin: 0; padding: 0; }
 .content { border-top: 1px dotted #555; margin: 40px 0 0; padding: 0 15px;}
 .footer { color: #777; padding: 20px 15px 10px; }
 
-.photos { border-left: 1px solid #fff; border-top: 1px solid #fff; }
-.photos .photo { border-bottom: 1px solid #fff; border-right: 1px solid #fff; overflow: hidden; padding: 0; }
+.photos { border-left: 1px dotted #fff; border-top: 1px dotted #fff; }
+.photos .photo { border-bottom: 1px dotted #fff; border-right: 1px dotted #fff; overflow: hidden; padding: 0; }
 .photos .photo img { cursor: pointer; position: relative; -webkit-transition: all 0.3s ease; -moz-transition: all 0.3s ease; -o-transition: all 0.3s ease; -ms-transition: all 0.3s ease; transition: all 0.3s ease; }
 .photos .photo:hover img { transform:scale(1.2); -ms-transform:scale(1.2); -moz-transform:scale(1.2); -webkit-transform:scale(1.2); -o-transform:scale(1.2); }
 .photos .photo h4 { cursor: pointer; display: none; position: absolute; top: 50%; width: 100%; }
@@ -18,5 +18,25 @@ a:hover { color: #74ae6b; }
 .photos .photo h4 span { background: rgb(0, 0, 0); background: rgba(0, 0, 0, 0.7); color: white; font-weight: bold; font-size: 24px; padding: 10px; }
 .photos .photo h4 span.spacer { padding: 0 5px; }
 
-.modal .photo.dimmed { opacity: 0.3; filter: alpha(opacity=30); }
-.modal .spinner-container { position: absolute; left: 50%; top: 50%; }
+.modal .photo.dimmed { opacity: 0.5; filter: alpha(opacity=50); }
+.modal .spinner-container { position: absolute; left: 45%; top: 45%; }
+.modal .spinner-container .spinner { font-size: 3em; }
+.modal .spinner-container .spinner-2 { font-size: 1.5em; }
+
+/* Small devices (tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .modal .spinner-container .spinner { font-size: 4em; }
+  .modal .spinner-container .spinner-2 { font-size: 2em; }
+}
+
+/* Medium devices (desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .modal .spinner-container .spinner { font-size: 5em; }
+  .modal .spinner-container .spinner-2 { font-size: 2.5em; }
+}
+
+/* Large devices (large desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  .modal .spinner-container .spinner { font-size: 6em; }
+  .modal .spinner-container .spinner-2 { font-size: 3em; }
+}
