--- a/web/app/views/photos.html
+++ b/web/app/views/photos.html
@@ -13,7 +13,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title">{{selectedPhoto.created | date: longDateFormat}}</h4>
+        <h4 class="modal-title">{{selectedPhoto.created | date: longDateFormat}} ({{calculatedAge}} old)</h4>
       </div>
       <div class="modal-body ">
         <img src="{{photosPath}}/{{selectedPhoto.image}}" class="photo img-responsive" ng-class="isLoading ? 'dimmed' : ''" />
